Version 2.1.0 - Dependency upgrades, Bump required Java version to Java 21 (LTS), Migrated to Maven Central publishing